k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: devamps-service
spec:
  selector:
    app: devamps-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
