k8s/api-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: devamps-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: devamps-service
          servicePort: 80
